added styles to companions page

--- a/source/companions.html
+++ b/source/companions.html
@@ -1024,7 +1024,7 @@
                 </div>
               </li>
             </ul>
-            <button type="button" class="companions__show-more button button--plus button--transparent-theme">
+            <button type="button" class="button button--plus button--transparent-theme">
               <svg class="button--active" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
                 <line x1="7" x2="7" y2="14" stroke="#C2C4C9" stroke-width="2" />
                 <line y1="7" x2="14" y2="7" stroke="#C2C4C9" stroke-width="2" />
@@ -1040,16 +1040,18 @@
             <span class="companions__page">3</span>
             <span class="companions__page">4</span>
           </div>
-          <button class="companions__prev-page button" type="button">
-            <svg class="button--active" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 9L9.75 0.339745L9.75 17.6603L0 9Z" />
-            </svg>
-          </button>
-          <button class="companions__next-page button" type="button">
-            <svg class="button--active" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10 8.89478L0.25 17.555L0.25 0.234521L10 8.89478Z" />
-            </svg>
-          </button>
+          <div class="companions__page-buttons">
+            <button class="companions__button button" type="button">
+              <svg class="button--active" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 9L9.75 0.339745L9.75 17.6603L0 9Z" />
+              </svg>
+            </button>
+            <button class="companions__button button" type="button">
+              <svg class="button--active" width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 8.89478L0.25 17.555L0.25 0.234521L10 8.89478Z" />
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -1057,10 +1059,10 @@
   <footer class="page-footer">
     <div class="page-footer__container container">
       <h2 class="visually-hidden">Погнали?</h2>
-      <a href="#" class="page-footer__logo-mobile">
+      <a href="index.html" class="page-footer__logo-mobile">
         <img class="logo" src="img/logo-mobile-dark.png" width="226" height="30" alt="Погнали?" />
       </a>
-      <a href="#" class="page-footer__logo">
+      <a href="index.html" class="page-footer__logo">
         <img class="logo" src="img/logo.png" width="226" height="30" alt="Логотип" />
       </a>
       <ul class="page-footer__list social-list">
