--- a/source/directions.html
+++ b/source/directions.html
@@ -168,10 +168,10 @@
             <b class="general-info__level-number">80</b>
             <span class="general-info__level-text text">level</span>
           </div>
-          <div class="user-info__avatar general-info__avatar">
-            <img class="general-info__avatar general-info__avatar--small" src="img/demin-avatar.png"
+          <div class="user-info__avatar">
+            <img class="user-info__avatar user-info__avatar--small" src="img/demin-avatar.png"
               alt="Фотография Демина" />
-            <img class="general-info__avatar general-info__avatar--medium" src="img/demin-avatar-medium.png"
+            <img class="user-info__avatar user-info__avatar--medium" src="img/demin-avatar-medium.png"
               alt="Фотография Демина" />
           </div>
           <!-- </div> -->
@@ -181,11 +181,11 @@
           </button>
           <!-- </div> -->
           <fieldset class="user-info__tags general-info__tags dataset">
-            <legend class="dataset__legend text">ТЭГИ</legend>
+            <legend class="user-info__legend dataset__legend user-info__legend--left text">ТЭГИ</legend>
             <textarea class="dataset__change-tags text">#бургер #бар #футбол #концерт #крафт</textarea>
           </fieldset>
           <fieldset class="user-info__transport general-info__transport dataset">
-            <legend class="dataset__legend">Транспорт</legend>
+            <legend class="user-info__legend dataset__legend">Транспорт</legend>
             <ul class="dataset__list transport-list">
               <li class="transport-list__item">
                 <button class="transport-list__item button button--togle button--transparent-theme " type="button">
@@ -364,7 +364,7 @@
                 <input type="date" class="step-list__day-date date " />
               </div>
               <button type=" button"
-                class="step-list__add-step step-list__add-step--outsideflow button button__caption button--middle-theme">СЛЕДУЮЩИЙ
+                class="add-plans__button-step add-plans__button-step--outsideflow button button__caption button--middle-theme">СЛЕДУЮЩИЙ
                 ШАГ</button>
             </li>
             <li class="step-list__item step-list__container">
@@ -444,7 +444,7 @@
                 </li>
               </ul>
               <div class="step-list__buttons">
-                <button type="button" class="step-list__add-step button button--dark-theme">
+                <button type="button" class="add-plans__add-step button button--dark-theme">
                   <span class="button__caption">ДОБАВИТЬ СТРАНУ</span>
                   <svg class="select-input-list__flag" width="14" height="14" viewBox="0 0 14 14"
                     xmlns="http://www.w3.org/2000/svg">
@@ -453,11 +453,11 @@
                   </svg>
                 </button>
                 <div class="step-list__nav-buttons">
-                  <button type="button" class="step-list__button-step button button--middle-theme">
+                  <button type="button" class="add-plans__button-step button button--middle-theme">
                     <span class="button__caption">СЛЕДУЮЩИЙ ШАГ</span>
                   </button>
                   <button type="button "
-                    class="step-list__button-step step-list__previous button button--transparent-theme">
+                    class="add-plans__button-step step-list__previous button button--transparent-theme">
                     <span class="button__caption">НА ШАГ НАЗАД</span>
                   </button>
                 </div>
@@ -513,11 +513,11 @@
                 </li>
               </ul>
               <div class="step-list__nav-buttons">
-                <button type="button" class="step-list__button-step button button--middle-theme">
+                <button type="button" class="add-plans__button-step button button--middle-theme">
                   <span class="button__caption">СЛЕДУЮЩИЙ ШАГ</span>
                 </button>
                 <button type="button "
-                  class="step-list__button-step step-list__previous button button--transparent-theme">
+                  class="add-plans__button-step step-list__previous button button--transparent-theme">
                   <span class="button__caption">НА ШАГ НАЗАД</span>
                 </button>
               </div>
