--- a/source/index.html
+++ b/source/index.html
@@ -393,7 +393,7 @@
           <ul class="users__cards card-list">
             <li class="users__card-list card-list__item">
               <div class="users__card card-list__card">
-                <img class="card-list__photo" src="img/tany-photo.png" alt="Фото Тани Фирсовой" />
+                <img class="users__photo" src="img/tany-photo.png" alt="Фото Тани Фирсовой" />
                 <div class="users__level ">
                   <b class="text users__level-number">99</b>
                   <span class="text users__level-text">level</span>
@@ -484,7 +484,7 @@
             </li>
             <li class="users__card-list card-list__item">
               <div class="users__card card-list__card">
-                <img class="card-list__photo" src="img/demin-photo.png" alt="Фото Петра Демина" />
+                <img class="users__photo" src="img/demin-photo.png" alt="Фото Петра Демина" />
                 <div class="users__level">
                   <b class="text users__level-number">80</b>
                   <span class="text users__level-text">level</span>
@@ -513,6 +513,9 @@
                         </li>
                         <li class="text hashtag-list__item">
                           #концерт
+                        </li>
+                        <li class="text hashtag-list__item">
+                          #крафт
                         </li>
                         <li class="text hashtag-list__item">
                           #крафт
