added effects to index page

--- a/source/index.html
+++ b/source/index.html
@@ -406,20 +406,23 @@
                 </div>
                 <div class="users__card-info card-list__info">
                   <ul class="users__flags card-list__flags">
-                    <li>
-                      <img class="users__flag users__flag-tooltip-1 flag" src="img/seychelles-flag.png"
-                        alt="Флаг Сейшилы" />
-                      <div class="users__flag-tooltip-position users__flag-tooltip-1--visible tooltip text">
-                        Авиаперелет
+                    <li class="users__flag-tooltip-1">
+                      <img class="users__flag  flag" src="img/seychelles-flag.png" alt="Флаг Сейшилы" />
+                      <div class="users__flag-tooltip-1-position users__flag-tooltip-1--visible tooltip text">
+                        Сейшилы
                       </div>
                     </li>
-                    <li>
-                      <img class="users__flag users__flag-tooltip-2 users__flag-tooltip-2--visible flag"
-                        src="img/thailand-flag.png" alt="Флаг Тайланда" />
+                    <li class="users__flag-tooltip-2">
+                      <img class="users__flag flag" src="img/thailand-flag.png" alt="Флаг Тайланда" />
+                      <div class="users__flag-tooltip-2-position users__flag-tooltip-2--visible tooltip text">
+                        Тайланд
+                      </div>
                     </li>
-                    <li>
-                      <img class="users__flag users__flag-tooltip-3 users__flag-tooltip-3--visible flag"
-                        src="img/sri-lanka-flag.png" alt="Флаг Шри-Ланки" />
+                    <li class="users__flag-tooltip-3">
+                      <img class="users__flag  flag" src="img/sri-lanka-flag.png" alt="Флаг Шри-Ланки" />
+                      <div class="users__flag-tooltip-3-position users__flag-tooltip-3--visible tooltip text">
+                        Шри-Ланка
+                      </div>
                     </li>
                   </ul>
                   <blockquote class="card-list__item">
@@ -513,11 +516,17 @@
                 </div>
                 <div class="users__card-info card-list__info">
                   <ul class="users__flags card-list__flags">
-                    <li>
+                    <li class="users__flag-tooltip-4">
                       <img class="users__flag flag" src="img/belgium-flag.png" alt="Флаг Бельгии" />
+                      <div class="users__flag-tooltip-4-position users__flag-tooltip-4--visible tooltip text">
+                        Бельгия
+                      </div>
                     </li>
-                    <li>
+                    <li class="users__flag-tooltip-5">
                       <img class="users__flag flag" src="img/czech-flag.png" alt="Флаг Чехии" />
+                      <div class="users__flag-tooltip-5-position users__flag-tooltip-5--visible tooltip text">
+                        Чехия
+                      </div>
                     </li>
                   </ul>
                   <blockquote class="card-list__item">
